--- a/views/keenan.hbs
+++ b/views/keenan.hbs
@@ -16,7 +16,8 @@
         <header>
             <div style="background-color:black;display:flex;">
               <img class="main-logo"  src="/images/puppet.png" style="width:30px;height:30px;padding:2px;">
-              <span class="page-header">Keenan</span>
+              <span class="page-header">Keenan 2</span>
+              ksdjhflk saasjdhfkl jashflkjh
             </div>
         </header>
         <main class="page-content">
